# LF13_Infection_Simulation

./: .gitignore  README.md
docs/: Dokumentation.tex  Klassendiagramm.dia  Lastenheft.tex
src/: CMakeLists.txt
src/controller/: controller.cpp  controller.h  personcontroller.cpp  personcontroller.h
src/model/: enumcolor.cpp  enumcolor.h  person.cpp  person.h  population.cpp  population.h  status.h
src/view/: mainwindow.cpp  mainwindow.h
