cmake_minimum_required(VERSION 3.5)

project(src VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)

set(PROJECT_SOURCES
        main.cpp

)

set(VIEW_SOURCE
    mainwindow.cpp
    mainwindow.h
    mainwindow.ui
)

set(MODEL_SOURCE
    person.h
    person.cpp
)

set(CONTROLLER_SOURCE
    personcontroller.h
    personcontroller.cpp
)

add_executable(View ${VIEW_SOURCE})
add_executable(Model ${MODEL_SOURCE})
add_executable(Controller ${CONTROLLER_SOURCE})

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(Infection_Simulation
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
    )
else()
    add_executable(Infection_Simulation
        ${PROJECT_SOURCES}
    )
endif()

target_link_libraries(Infection_Simulation PRIVATE Qt${QT_VERSION_MAJOR}::Widgets -lstdc++ -lm)
target_link_libraries(View PRIVATE Qt${QT_VERSION_MAJOR}::Widgets -lstdc++ -lm)
target_link_libraries(Model PRIVATE Qt${QT_VERSION_MAJOR}::Widgets -lstdc++ -lm)
target_link_libraries(Controller PRIVATE Qt${QT_VERSION_MAJOR}::Widgets -lstdc++ -lm)

if(${QT_VERSION} VERSION_LESS 6.1.0)
  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.src)
endif()

set_target_properties(Infection_Simulation PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

include(GNUInstallDirs)
install(TARGETS Infection_Simulation
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
